# zed

./: Cargo.toml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
crates/code_review_assistant/: Cargo.toml  README.md
crates/code_review_assistant/src/: code_review_assistant.rs  review_panel.rs  review_settings.rs  review_thread.rs
crates/zed/: Cargo.toml
crates/zed/src/: zed.rs
